[tool.poetry]
name = "asymmetric"
version = "0.3.0"
description = "The async framework that calls you back! Enable ridiculously fast and easy module-to-API transformations. Learn in minutes, implement in seconds. Batteries included."
license = "MIT"
authors = ["Daniel Leal <dlleal@uc.cl>"]
maintainers = ["Daniel Leal <dlleal@uc.cl>"]
readme = "README.md"
homepage = "https://asymmetric.one/"
repository = "https://github.com/daleal/asymmetric"
documentation = "https://asymmetric.one/docs/"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "asymmetric" },
]
exclude = [
    ".github",
    ".flake8",
    ".pylintrc",
    "mypy.ini",
    "Makefile",
    "scripts",
    "tests"
]

[tool.poetry.dependencies]
python = "^3.6"
httpx = "^0.16.1"
starlette = "^0.13.8"
uvicorn = "^0.12.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
mypy = "^0.790"
pylint = "^2.6.0"
pytest = "^6.1.1"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.10.1"

[tool.poetry.plugins."console_scripts"]
asymmetric = "asymmetric.cli.core:dispatcher"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/daleal/asymmetric/issues"
