[tool.poetry]
name = "asymmetric"
version = "0.3.0"
description = "Ridiculously fast and easy module-to-API transformations. Learn in minutes, implement in seconds. Batteries included."
license = "MIT"
authors = ["Daniel Leal <dlleal@uc.cl>"]
maintainers = ["Daniel Leal <dlleal@uc.cl>"]
readme = "README.md"
homepage = "https://asymmetric.one/"
repository = "https://github.com/daleal/asymmetric"
documentation = "https://asymmetric.one/docs/"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "asymmetric" },
]
exclude = [
    ".github",
    ".flake8",
    ".pylintrc",
    "mypy.ini",
    "Makefile",
    "scripts",
    "tests"
]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.18.2"
starlette = "^0.15.0"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
isort = "^5.9.1"
mypy = "^0.910"
pylint = "^2.9.3"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"

[tool.poetry.plugins."console_scripts"]
asymmetric = "asymmetric.cli.core:dispatcher"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/daleal/asymmetric/issues"
